[metadata]
name = rsa_enc
version = 0.0.0
author = Wouter Pennings
author_email = wouterpennings@gmail.com
description = RSA encryption implementation in Python
long-description = file: README.md
url = https://github.com/WouterPennings/rsa_enc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
